--- a/Overseas Box Office Collection/over_circuit.html
+++ b/Overseas Box Office Collection/over_circuit.html
@@ -5,176 +5,231 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Film - Stats: Highest Circuit-Wise Gross Collection</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<h1 class="name"><a href="../index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
-				<a href="#menu">Menu</a>
-			</header>
+<head>
+	<title>Film - Stats: Highest Circuit-Wise Gross Collection</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">About Us </a></li>
-					<li><a href="../login.html">Login/Register</a></li>
+<body>
+
+	<!-- Header -->
+	<header id="header">
+		<h1 class="name"><a href="../index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<a href="#menu">Menu</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="../about.html">About Us </a></li>
+			<li><a href="../login.html">Login/Register</a></li>
+		</ul>
+	</nav>
+	<div id="main">
+		<!-- Two -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<a href="../overseas.html">
+					<h2>Overseas Box Office Collection:</h2>
+				</a>
+				<hr>
+				<h3 class="gyb">Highest Circuit-Wise Gross Collection:</h3>
+				<hr class="gyb">
+				<h3>Highest USA/Canada Gross Collection:</h3>
+				<div class="row">
+					<div class="col ss2">
+						<select class="choose">
+							<option disabled selected> Year </option>
+							<option value="2k21"> 2021</option>
+							<option value="2k20"> 2020</option>
+							<option value="2k19"> 2019</option>
+							<option value="2k18"> 2018</option>
+							<option value="2k17"> 2017</option>
+							<option value="2k16"> 2016</option>
+							<option value="2k15"> 2015</option>
+							<option value="2k14"> 2014</option>
+							<option value="2k13"> 2013</option>
+							<option value="2k12"> 2012</option>
+							<option value="2k11"> 2011</option>
+							<option value="2k10"> 2010</option>
+						</select><br>
+					</div>
+				</div>
+				<table class="tab12">
+					<tr>
+						<th valign="middle" class="ww"><a>Rank</a></th>
+						<th valign="middle" class="ww "><a>Poster</a></th>
+						<th valign="middle" class="ww"><a>Movie Name</a></th>
+						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
+						<th valign="middle" class="ww"><a href="over_circuit.html">USA/Canada</a></th>
+						<th valign="middle" class="ww"><a href="over_lifetime.html">Lifetime Gross</a></th>
+					</tr>
+					<tr>
+						<td>1.</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/dangal.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg"
+									width="50" height="70"></a></td>
+						<td><a href="../detail.html">Dangal</a></td>
+						<td>23 Dec 2016</td>
+						<td>$ 12.39 Mn</td>
+						<td>$ 233.8 Mn</td>
+					</tr>
+					<tr>
+						<td>2.</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em; "><noscript><img
+										src="../images/padmavat.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/padmavat.jpg" data-src="../images/padmavat.jpg"
+									width="50" height="70"></a></td>
+						<td><a href="../detail.html">Padmaavat</a></td>
+						<td>25 Jan 2018</td>
+						<td>$ 12.16 Mn</td>
+						<td>$ 29.14 Mn</td>
+					</tr>
+					<tr>
+						<td>3.</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/pk.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/pk.jpg" data-src="../images/pk.jpg" width="50"
+									height="70"></a></td>
+						<td><a href="../detail.html">PK</a></td>
+						<td>19 Dec 2014</td>
+						<td>$ 10.61 Mn</td>
+						<td>$ 47.61 Mn</td>
+					</tr>
+				</table>
+				<div class="wrp">
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg"
+									width="70" height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+										class="sx">Dangal</b></a><br>
+								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;23 Dec 2016<br>
+								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_lifetime.html"><b>Lifetime Gross <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41 Mn		</p>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/padmavat.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Padmaavat</b></a><br>
+								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;25 Jan 2018<br>
+								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_lifetime.html"><b>Lifetime
+										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/pk.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+										class="sx">PK</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;29 Dec 2014<br>
+								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_lifetime.html"><b>Lifetime
+										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/war.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+										class="sx">War</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_lifetime.html"><b>Lifetime
+										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+							</p>
+						</div>
+					</div>
+					<hr>
+				</div>
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<div class="flex flex-3">
+					<div class="col">
+						<h3>Box Office </h3>
+						<ul class="alt">
+							<li><a href="#">Magazine</a></li>
+							<li><a href="#">Numbers</a></li>
+							<li><a href="#">Movie Calender</a></li>
+							<li><a href="#">Subscribe</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Topics</h3>
+						<ul class="alt">
+							<li><a href="#">From the Magazine</a></li>
+							<li><a href="#">Tracking & Forecasts</a></li>
+							<li><a href="#">Numbers</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Company</h3>
+						<ul class="alt">
+							<li><a href="#">Terms & Conditions</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="copyright">
+				<ul class="icons">
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-			</nav>
-            <div id="main">
-			<!-- Two -->
-				<section class="wrapper style2">
-					<div class="inner">
-                        <a href="../overseas.html"><h2>Overseas Box Office Collection:</h2></a><hr>
-						<h3>Highest Circuit-Wise Gross Collection:</h3><hr>
-                        <h3>Highest USA/Canada Gross Collection:</h3>
-                        <div class="row">							
-							<div class="col select">
-								<select name="year" class="addselect" id="year">
-										<option value="2k21" class="l1"> Year</option>
-										<option value="2k21" class="l1"> 2021</option>
-										<option value="2k20" class="l1"> 2020</option>
-										<option value="2k19" class="l1"> 2019</option>
-										<option value="2k18" class="l1"> 2018</option>
-										<option value="2k17" class="l1"> 2017</option>
-										<option value="2k16" class="l1"> 2016</option>
-										<option value="2k15" class="l1"> 2015</option>
-										<option value="2k14" class="l1"> 2014</option>
-										<option value="2k13" class="l1"> 2013</option>
-										<option value="2k12" class="l1"> 2012</option>
-										<option value="2k11" class="l1"> 2011</option>
-										<option value="2k10" class="l1"> 2010</option>
-								</select><br>
-                    		</div>
-						</div>
-						<table>
-							<tr>
-								<th width="5%" align="center" valign="middle" class="ww">Rank</th>
-                                <th width="15%" align="center" valign="middle" class="ww ">Poster</th>
-								<th width="25%" align="center" valign="middle" class="ww">Movie Name</th>
-								<th width="15%" align="center" valign="middle" class="ww">Release Date</th>
-								<th width="15%" align="center" valign="middle" class="ww">USA/Canada</th>
-								<th width="20%" align="center" valign="middle" class="ww">Lifetime Gross</th>
-							</tr>
-                            <tr>
-								<td>1.</td>
-								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/dangal.jpg" width='50' height='70'/></noscript><img class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg" width="50" height="70"></a></td>
-                                <td><a href="../detail.html">Dangal</a></td>
-								<td>23rd Dec , 16</td>
-                                <td>$12.39 Mn.</td>
-                                <td>$233.8 Mn.</td>
-							</tr>
-                            <tr>
-								<td>2.</td>
-                                <td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em; "><noscript><img src="../images/padmavat.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/padmavat.jpg" data-src="../images/padmavat.jpg" width="50" height="70"></a></td>
-								<td><a href="../detail.html">Padmaavat</a></td>
-								<td>25th Jan , 18</td>
-                                <td>$12.16 Mn.</td>
-								<td>$29.14 Mn.</td>
-                            </tr>
-                            <tr>
-								<td>3.</td>
-								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/pk.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/pk.jpg" data-src="../images/pk.jpg" width="50" height="70"></a></td>
-								<td><a href="../detail.html">PK</a></td>
-								<td>19th Dec , 14</td>
-                                <td>$10.61 Mn.</td>
-								<td>$47.61 Mn.</td>
-                            </tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-						</table>
-					</div>
-
-                </section>
-        
-        <!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-3">
-						<div class="col">
-							<h3>Box Office </h3>
-							<ul class="alt">
-								<li><a href="#">Magazine</a></li>
-								<li><a href="#">Numbers</a></li>
-								<li><a href="#">Movie Calender</a></li>
-								<li><a href="#">Subscribe</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Topics</h3>
-							<ul class="alt">
-								<li><a href="#">From the Magazine</a></li>
-								<li><a href="#">Tracking & Forecasts</a></li>
-								<li><a href="#">Numbers</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Company</h3>
-							<ul class="alt">
-								<li><a href="#">Terms & Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
-					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
-				</div>
-			</footer>
+				&copy; Design By: <a href="#">Tech_Marketz</a>   
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/skel.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<script src="../assets/js/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+			crossorigin="anonymous"></script>
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/skel.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
